# hist

./: .gitignore  Makefile  README.md  hist.py  pyproject.toml  readme.txt  unicode_hist.py
hist/: __main__.py  cli.py  cli.toml  histogram.py
